--- a/ui/app.html
+++ b/ui/app.html
@@ -1,4 +1,9 @@
-<!doctype html>
+
+<!-- top/bottom of ui/app.html -->
+<script type="module" src="/static/js/swipe.js"></script>
+<script type="module" src="/static/js/comments.js"></script>
+<script type="module" src="/static/js/api.js"></script>
+<script type="module" src="/static/js/main.js"></script><!doctype html>
 <html lang="te">
 <head>
   <meta charset="utf-8" />
@@ -82,3 +87,8 @@
   <script src="/static/js/main.js"></script>
 </body>
 </html>
+<!-- top/bottom of ui/app.html -->
+<script type="module" src="/static/js/swipe.js"></script>
+<script type="module" src="/static/js/comments.js"></script>
+<script type="module" src="/static/js/api.js"></script>
+<script type="module" src="/static/js/main.js"></script>
