--- a/ui/app.html
+++ b/ui/app.html
@@ -1,94 +1,71 @@
-
-<!-- top/bottom of ui/app.html -->
-<script type="module" src="/static/js/swipe.js"></script>
-<script type="module" src="/static/js/comments.js"></script>
-<script type="module" src="/static/js/api.js"></script>
-<script type="module" src="/static/js/main.js"></script><!doctype html>
+<!-- /opt/render/project/src/ui/app.html -->
+<!doctype html>
 <html lang="te">
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1" />
   <title>24/7 Telugu Short News</title>
+
   <link rel="stylesheet" href="/static/css/app.css">
   <link rel="stylesheet" href="/static/css/styles.css">
-  <style>
-    /* minimal layout fallback so it'll look ok even without your css */
-    body{font-family:Helvetica,Arial,sans-serif;background:#fff;margin:0;padding:0}
-    .wrap{max-width:820px;margin:20px auto;padding:16px}
-    .header{display:flex;align-items:center;gap:12px}
-    .logo{font-size:28px;font-weight:700}
-    .card{background:#fff;border-radius:10px;padding:20px;margin-top:18px;box-shadow:0 6px 18px rgba(0,0,0,.06)}
-    .title{font-size:26px;margin:0 0 8px}
-    .summary{color:#444;margin-bottom:10px}
-    .controls{display:flex;gap:8px;align-items:center;margin-top:12px}
-    .btn{background:#0b63ff;color:white;padding:8px 12px;border-radius:6px;border:0;cursor:pointer}
-    .btn.secondary{background:#eee;color:#222}
-    .likes-box{margin-left:auto;display:flex;gap:8px;align-items:center}
-    .count{background:#fff;border:1px solid #ddd;padding:6px 8px;border-radius:6px}
-    .comments{margin-top:16px}
-    .comment-list{margin-top:8px}
-    .comment{padding:8px;background:#fafafa;border-radius:6px;margin-bottom:6px}
-    input[type=text]{padding:10px;border-radius:6px;border:1px solid #ddd;width:100%}
-    form{display:flex;gap:8px;margin-top:8px}
-    form button{padding:10px 12px}
-    .nav{display:flex;gap:8px;margin-top:12px}
-    .sm{font-size:13px;color:#666}
-    /* overlay logger small */
-    #mini-logger{position:fixed;left:0;right:0;bottom:0;z-index:99999;max-height:28vh;overflow:auto;background:rgba(0,0,0,.8);color:#ffd; font-family:monospace; font-size:12px;padding:6px; display:none}
-    #logger-toggle{position:fixed;left:6px;bottom:calc(28vh + 8px);z-index:999999;padding:6px 8px;background:#111;color:#fff;border-radius:6px;border:0}
-  </style>
+
+  <meta name="theme-color" content="#ffffff">
 </head>
 <body>
-  <div class="wrap">
-    <div class="header">
-      <div class="logo">☀️ 24/7 Telugu Short News</div>
-    </div>
+  <main class="app-root">
+    <header class="topbar">
+      <div class="brand">24/7 <span class="accent">Telugu</span> Short News</div>
+      <div class="hint">స్వైప్ చేయండి ↑ / ↓</div>
+    </header>
 
-    <div class="card" id="news-card">
-      <h2 class="title" id="news-title">లోడ్ అవుతోంది...</h2>
-      <div class="summary" id="news-summary">న్యూస్ కోసం వేచి ఉంది...</div>
-      <a id="news-link" href="#" target="_blank" class="sm" style="color:#0b63ff;display:inline-block;margin-top:8px">మూలం చూడటానికి</a>
-
-      <div class="controls">
-        <div class="nav">
-          <button id="prevBtn" class="btn secondary">Prev</button>
-          <button id="nextBtn" class="btn">Next</button>
+    <section id="news-stage" class="stage">
+      <article id="news-card" class="card">
+        <div class="media">
+          <img id="news-image" src="/static/img/placeholder.png" alt="news image" />
         </div>
 
-        <div class="likes-box">
-          <button id="likeBtn" class="btn secondary">👍</button>
-          <div id="likesCount" class="count">0</div>
-          <button id="dislikeBtn" class="btn secondary">👎</button>
-          <div id="dislikesCount" class="count">0</div>
+        <div class="content">
+          <h1 id="news-title" class="title">న్యూస్ టైటిల్ రాలేదు</h1>
+          <p id="news-summary" class="summary">న్యూస్ లోడ్ అవుతోంది...</p>
+
+          <div class="meta-row">
+            <a id="news-link" class="read-more" href="#" target="_blank" rel="noopener">Read original</a>
+
+            <div class="reactions small">
+              <button id="like-btn" class="icon-btn">👍</button><span id="likes-count">0</span>
+              <button id="dislike-btn" class="icon-btn">👎</button><span id="dislikes-count">0</span>
+            </div>
+          </div>
+
+          <div class="controls">
+            <button id="prev-btn" class="primary ghost">Prev</button>
+            <div class="spacer"></div>
+            <button id="next-btn" class="primary">Next</button>
+          </div>
+
+          <div id="comments-section" class="comments">
+            <h3>కామెంట్స్</h3>
+            <div id="comments-list" class="comments-list">కామెంట్స్ లోడ్ అవుతున్నాయి...</div>
+
+            <div class="comment-form">
+              <input id="comment-input" placeholder="మీ అభిప్రాయాన్ని రాయండి..." />
+              <button id="comment-post" class="primary small">పోస్ట్</button>
+            </div>
+          </div>
         </div>
-      </div>
+      </article>
+    </section>
 
-      <div class="comments" id="comments-root">
-        <div style="display:flex;align-items:center;justify-content:space-between">
-          <strong>కామెంట్స్</strong>
-          <small class="sm" id="comments-count">0</small>
-        </div>
+    <footer class="footer-note">
+      <div class="small-note">Source summarised by AI • 24-48 hour auto-prune</div>
+    </footer>
+  </main>
 
-        <div class="comment-list" id="commentList"></div>
-
-        <form id="commentForm">
-          <input type="text" id="commentInput" placeholder="మీ అభిప్రాయాన్ని రాయండి..." />
-          <button type="submit" class="btn">పంపండి</button>
-        </form>
-      </div>
-    </div>
-  </div>
-
-  <!-- logger toggle + area -->
-  <button id="logger-toggle">Logger</button>
-  <div id="mini-logger"></div>
-
-  <!-- Single JS file (not module) -->
-  <script src="/static/js/main.js"></script>
+  <!-- scripts: keep module ordering consistent -->
+  <script type="module" src="/static/js/main.js"></script>
+  <script type="module" src="/static/js/swipe.js"></script>
+  <script type="module" src="/static/js/api.js"></script>
+  <script type="module" src="/static/js/comments.js"></script>
+  <script type="module" src="/static/js/likes.js"></script>
 </body>
 </html>
-<!-- top/bottom of ui/app.html -->
-<script type="module" src="/static/js/swipe.js"></script>
-<script type="module" src="/static/js/comments.js"></script>
-<script type="module" src="/static/js/api.js"></script>
-<script type="module" src="/static/js/main.js"></script>
