--- a/ui/app.html
+++ b/ui/app.html
@@ -1,4 +1,5 @@
 <!-- /opt/render/project/src/ui/app.html -->
+<script src="/static/js/dev-overlay.js"></script>
 <!doctype html>
 <html lang="te">
 <head>
