--- a/ui/app.html
+++ b/ui/app.html
@@ -1,72 +1,83 @@
-<!DOCTYPE html>
+{# ui/app.html - replace entire file #}
+<!doctype html>
 <html lang="te">
-<head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
     <title>24/7 Telugu Short News</title>
 
+    <!-- CSS -->
     <link rel="stylesheet" href="/static/css/app.css" />
     <link rel="stylesheet" href="/static/css/styles.css" />
-</head>
 
-<body>
-
-    <header class="header">
-        <h1><span style="color: orange;">24/7</span> <span style="color:#FF5722;">Telugu</span> Short News</h1>
-        <div class="swipe-label">స్వైప్ చేయండి ↑ / ↓</div>
+    <!-- Optional font (if available) -->
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;600;700&display=swap" rel="stylesheet">
+  </head>
+  <body>
+    <header class="header" role="banner">
+      <h1><span style="color:#ffb74d">24/7</span> <span style="color:#ff7043">Telugu</span> Short News</h1>
+      <div class="swipe-label">స్వైప్ చేయండి ↑ / ↓</div>
     </header>
 
-    <main id="news-container">
+    <main id="news-container" role="main">
+      <!-- card -->
+      <section class="news-content" id="news-card">
+        <!-- NOTE: removed image/placeholder intentionally (user requested no image) -->
 
-        <!-- Image removed completely -->
-        <!-- News Content -->
-        <div class="news-content">
-            <h2 id="news-title"></h2>
-            <p id="news-summary"></p>
+        <!-- Title + summary -->
+        <h2 id="news-title">న్యూస్ టైటిల్ రాలేదు</h2>
+        <p id="news-summary">న్యూస్ లోడ్ అవుతోంద...</p>
 
-            <a id="news-original" href="#" target="_blank" class="original-link">Read original</a>
+        <!-- read original link -->
+        <a id="original-link" class="original-link" href="#" target="_blank" rel="noopener">Read original</a>
 
-            <div class="nav-buttons">
-                <button id="prev-btn" class="btn-prev">Prev</button>
+        <!-- nav + reactions row -->
+        <div class="nav-buttons">
+          <div style="display:flex; gap:12px; align-items:center;">
+            <button class="btn-prev" id="btn-prev">Prev</button>
+          </div>
 
-                <div class="reactions">
-                    <button id="like-btn" class="reaction-btn">👍</button>
-                    <span id="like-count">0</span>
+          <div class="reactions" style="margin-left:auto;">
+            <button class="reaction-btn" id="like-btn">👍</button>
+            <div id="like-count">0</div>
 
-                    <button id="dislike-btn" class="reaction-btn">👎</button>
-                    <span id="dislike-count">0</span>
-                </div>
+            <button class="reaction-btn" id="dislike-btn">👎</button>
+            <div id="dislike-count">0</div>
 
-                <button id="next-btn" class="btn-next">Next</button>
-            </div>
+            <button class="btn-next" id="btn-next" aria-label="Next">Next</button>
+          </div>
+        </div>
+      </section>
+
+      <!-- comments -->
+      <section class="comments-box" id="comments-section" aria-live="polite">
+        <h3 class="comments-title">కామెంట్స్</h3>
+
+        <div class="comments-list" id="comments-list">
+          <!-- comment items injected here -->
         </div>
 
-        <!-- Comments -->
-        <section class="comments-box">
-            <h3 class="comments-title">కామెంట్స్</h3>
-
-            <div id="comments-list" class="comments-list">
-                <p class="no-comments">కామెంట్స్ లోడ్ అవుతున్నాయి...</p>
-            </div>
-
-            <div class="comment-input-area">
-                <input id="comment-input" type="text" placeholder="మీ అభిప్రాయాన్ని రాయండి..." />
-                <button id="send-comment" class="send-btn">పంపండి</button>
-            </div>
-        </section>
+        <div class="comment-input-area">
+          <input id="comment-input" placeholder="మీ అభిప్రాయాన్ని రాయండి..." autocomplete="off" />
+          <button class="send-btn" id="comment-send">పంపండి</button>
+        </div>
+      </section>
     </main>
 
     <footer class="footer">
-        <p>Source summarised by AI • 24–48 hour auto-prune</p>
+      Source summarised by AI • 24–48 hour auto-prune
     </footer>
 
-    <script src="/static/js/state.js"></script>
-    <script src="/static/js/api.js"></script>
-    <script src="/static/js/render.js"></script>
-    <script src="/static/js/swipe.js"></script>
-    <script src="/static/js/comments.js"></script>
-    <script src="/static/js/likes.js"></script>
-    <script src="/static/js/main.js"></script>
+    <!-- logger badge (kept hidden by CSS until debug) -->
+    <div class="logger-badge hidden" id="logger-badge">Logger</div>
 
-</body>
+    <!-- JS (keep same order as before) -->
+    <script type="module" src="/static/js/state.js"></script>
+    <script type="module" src="/static/js/api.js"></script>
+    <script type="module" src="/static/js/render.js"></script>
+    <script type="module" src="/static/js/swipe.js"></script>
+    <script type="module" src="/static/js/comments.js"></script>
+    <script type="module" src="/static/js/likes.js"></script>
+    <script src="/static/js/main.js"></script>
+  </body>
 </html>
