--- a/ui/app.html
+++ b/ui/app.html
@@ -1,9 +1,4 @@
-
-<!-- top/bottom of ui/app.html -->
-<script type="module" src="/static/js/swipe.js"></script>
-<script type="module" src="/static/js/comments.js"></script>
-<script type="module" src="/static/js/api.js"></script>
-<script type="module" src="/static/js/main.js"></script><!doctype html>
+<!doctype html>
 <html lang="te">
 <head>
   <meta charset="utf-8" />
@@ -79,16 +74,13 @@
     </div>
   </div>
 
-  <!-- logger toggle + area -->
   <button id="logger-toggle">Logger</button>
   <div id="mini-logger"></div>
 
-  <!-- Single JS file (not module) -->
-  <script src="/static/js/main.js"></script>
+  <script type="module" src="/static/js/swipe.js"></script>
+  <script type="module" src="/static/js/comments.js"></script>
+  <script type="module" src="/static/js/api.js"></script>
+  <script type="module" src="/static/js/main.js"></script>
+
 </body>
 </html>
-<!-- top/bottom of ui/app.html -->
-<script type="module" src="/static/js/swipe.js"></script>
-<script type="module" src="/static/js/comments.js"></script>
-<script type="module" src="/static/js/api.js"></script>
-<script type="module" src="/static/js/main.js"></script>
