--- a/ui/app.html
+++ b/ui/app.html
@@ -1,4 +1,3 @@
-<!doctype html>
 <html lang="te">
 <head>
   <meta charset="utf-8" />
@@ -14,35 +13,35 @@
     .logo{font-size:28px;font-weight:700}
     .card{background:#fff;border-radius:10px;padding:20px;margin-top:18px;box-shadow:0 6px 18px rgba(0,0,0,.06)}
     .title{font-size:26px;margin:0 0 8px}
-    .summary{font-size:18px;line-height:1.4}
-    .controls{display:flex;justify-content:space-between;align-items:center;margin-top:20px;padding-top:10px;border-top:1px solid #eee}
-    .nav button{padding:10px 15px;cursor:pointer;border:1px solid #ddd;border-radius:5px;font-size:16px}
-    .nav button.secondary{background:#f0f0f0}
-    .likes-box{display:flex;align-items:center;gap:8px}
-    .likes-box button{font-size:18px;cursor:pointer;border:1px solid #ddd;border-radius:50%;width:36px;height:36px;display:flex;align-items:center;justify-content:center}
-    .likes-box .count{font-size:18px;min-width:20px;text-align:center}
-    .sm{font-size:14px;color:#777}
-    .comments{margin-top:20px;padding-top:10px;border-top:1px solid #eee}
-    .comment-list{margin-top:10px}
-    .comment{padding:8px;border-bottom:1px dotted #eee;font-size:16px}
-    #commentForm{display:flex;gap:8px;margin-top:10px}
-    #commentInput{flex-grow:1;padding:8px;border:1px solid #ddd;border-radius:5px}
-    /* Logger styles */
-    #mini-logger{position:fixed;bottom:0;right:0;width:300px;max-height:200px;background:#222;color:white;font-size:10px;overflow-y:scroll;padding:5px;box-shadow:0 0 10px rgba(0,0,0,0.5);display:none;z-index:1000}
-    #mini-logger div{margin-bottom:2px}
-    #logger-toggle{position:fixed;bottom:20px;right:20px;z-index:1001;padding:8px;background:#444;color:white;border:none;border-radius:5px;cursor:pointer}
+    .summary{color:#444;margin-bottom:10px}
+    .controls{display:flex;gap:8px;align-items:center;margin-top:12px}
+    .btn{background:#0b63ff;color:white;padding:8px 12px;border-radius:6px;border:0;cursor:pointer}
+    .btn.secondary{background:#eee;color:#222}
+    .likes-box{margin-left:auto;display:flex;gap:8px;align-items:center}
+    .count{background:#fff;border:1px solid #ddd;padding:6px 8px;border-radius:6px}
+    .comments{margin-top:16px}
+    .comment-list{margin-top:8px}
+    .comment{padding:8px;background:#fafafa;border-radius:6px;margin-bottom:6px}
+    input[type=text]{padding:10px;border-radius:6px;border:1px solid #ddd;width:100%}
+    form{display:flex;gap:8px;margin-top:8px}
+    form button{padding:10px 12px}
+    .nav{display:flex;gap:8px;margin-top:12px}
+    .sm{font-size:13px;color:#666}
+    /* overlay logger small */
+    #mini-logger{position:fixed;left:0;right:0;bottom:0;z-index:99999;max-height:28vh;overflow:auto;background:rgba(0,0,0,.8);color:#ffd; font-family:monospace; font-size:12px;padding:6px; display:none}
+    #logger-toggle{position:fixed;left:6px;bottom:calc(28vh + 8px);z-index:999999;padding:6px 8px;background:#111;color:#fff;border-radius:6px;border:0}
   </style>
 </head>
 <body>
   <div class="wrap">
-    <header class="header">
-      <div class="logo">📰 24/7 తెలుగు షార్ట్ న్యూస్</div>
-    </header>
+    <div class="header">
+      <div class="logo">☀️ 24/7 తెలుగు షార్ట్ న్యూస్</div>
+    </div>
 
-    <div class="card">
-      <h1 id="news-title" class="title">న్యూస్ లోడ్ అవుతోంది...</h1>
-      <p id="news-summary" class="summary"></p>
-      <a id="news-link" href="#" target="_blank" class="sm">పూర్తి ఆర్టికల్ 🔗</a>
+    <div class="card" id="news-card">
+      <h2 class="title" id="news-title">లోడ్ అవుతోంది...</h2>
+      <div class="summary" id="news-summary">న్యూస్ కోసం వేచి ఉంది...</div>
+      <a id="news-link" href="#" target="_blank" class="sm" style="color:#0b63ff;display:inline-block;margin-top:8px">మూలం చూడటానికి</a>
 
       <div class="controls">
         <div class="nav">
@@ -81,6 +80,5 @@
   <script type="module" src="/static/js/comments.js"></script>
   <script type="module" src="/static/js/api.js"></script>
   <script type="module" src="/static/js/main.js"></script>
-
 </body>
 </html>
